@@ -16,6 +16,7 @@
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
  * Author: Nicola Baldo <nbaldo@cttc.es>
+ *         Michele Polese <michele.polese@gmail.com> for the OutdoorPositionAllocator class
  */
 #ifndef BUILDING_POSITION_ALLOCATOR_H
 #define BUILDING_POSITION_ALLOCATOR_H
@@ -66,6 +67,64 @@ private:
   Ptr<UniformRandomVariable> m_rand;
 };
 
+/**
+ * \ingroup buildings
+ * \brief allocate outdoor positions
+ *
+ * Allocate positions outside of existing buildings using rejection sampling.
+ * This class extracts a random position in a box defined by the three 
+ * RandomVariableStreams for the X, Y and Z dimensions (similarly to 
+ * RandomBoxPositionAllocator), until a position is found that is outdoors 
+ * with respect to all of the buildings in the scenario, or a maximum number 
+ * of attempts is reached.  The RandomVariableStream and the maximum number 
+ * of attempts can be set using attributes.  If the maximum number of 
+ * attempts is reached, then the simulation aborts due to failure of properly
+ * positioning the node.
+ */
+class OutdoorPositionAllocator : public PositionAllocator
+{
+public:
+  OutdoorPositionAllocator ();
+
+  // inherited from Object
+  static TypeId GetTypeId (void);
+
+  // inherited from PositionAllocator
+  virtual Vector GetNext (void) const;
+
+  /**
+   * \brief Set the random variable stream object that generates x-positions
+   * \param x pointer to a RandomVariableStream object
+   */
+  void SetX (Ptr<RandomVariableStream> x);
+  /**
+   * \brief Set the random variable stream object that generates y-positions
+   * \param y pointer to a RandomVariableStream object
+   */
+  void SetY (Ptr<RandomVariableStream> y);
+  /**
+   * \brief Set the random variable stream object that generates z-positions
+   * \param z pointer to a RandomVariableStream object
+   */
+  void SetZ (Ptr<RandomVariableStream> z);
+
+  /**
+   * Assign a fixed random variable stream number to the random variables
+   * used by this model.  Return the number of streams (possibly zero) that
+   * have been assigned.
+   *
+   * \param stream first stream index to use
+   * \return the number of stream indices assigned by this model
+   */
+  int64_t AssignStreams (int64_t stream);
+
+private:
+  Ptr<RandomVariableStream> m_x; //!< pointer to x's random variable stream
+  Ptr<RandomVariableStream> m_y; //!< pointer to y's random variable stream
+  Ptr<RandomVariableStream> m_z; //!< pointer to z's random variable stream
+
+  uint32_t m_maxAttempts; //!< maximum number of attempts before giving up
+};
 
 /**
  * Allocate each position by randomly chosing a room from the list
