@@ -25,6 +25,9 @@ This release has been tested on the following platforms:
 
 New user-visible features
 -------------------------
+- (buildings) A new position allocator has been added to the buildings module.
+  The allocator places nodes randomly but in a manner that rejects positions
+  that are located within buildings defined in the scenario.
 
 Bugs fixed
 ----------
